--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,16 +1,65 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/* 
+/*
     body{
         background: #BDBDBD;
     }
-    
+
     You can write your own styles here...
-    
-    
-    ...Or you can use the import command to include 
+
+
+    ...Or you can use the import command to include
     other sylesheets into your bunde as well, e.j:
-    
+
     import 'relative/path/to/stylesheet.scss';
 
 */
+body {
+  background: #477148;
+  box-sizing: border-box;
+}
+.card {
+  background: white;
+  margin: auto;
+  height: 300px;
+  width: 200px;
+  padding: 20px;
+  padding-top: 80px;
+  border: 0.5px solid black;
+  border-radius: 10px;
+  position: relative;
+  font-size: 80px;
+  align-items: center;
+  &:before {
+    position: absolute;
+    padding-left: 5px;
+    top: 0px;
+    left: 10px;
+    font-size: 60px;
+  }
+  &:after {
+    position: absolute;
+    padding-left: 5px;
+    bottom: 0px;
+    right: 10px;
+    font-size: 60px;
+  }
+  &.spade:before,
+  &.spade:after {
+    content: "\2660";
+  }
+  &.club:before,
+  &.club:after {
+    content: "\2663";
+  }
+  &.heart:before,
+  &.heart:after {
+    content: "\2665";
+    color: red;
+  }
+  &.diamond:before,
+  &.diamond:after {
+    content: "\2666";
+    color: red;
+  }
+}
