--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,26 +1,15 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
-/*
-    body{
-        background: #BDBDBD;
-    }
-
-    You can write your own styles here...
-
-
-    ...Or you can use the import command to include
-    other sylesheets into your bunde as well, e.j:
-
-    import 'relative/path/to/stylesheet.scss';
-
-*/
 body {
   background: #477148;
   box-sizing: border-box;
 }
 .card {
   background: white;
-  margin: auto;
+  box-shadow: 2px 5px 10px black;
+  transform: translate(-25%, 35%);
+  margin-left: 45%;
+  top: 50%;
   height: 300px;
   width: 200px;
   padding: 20px;
@@ -28,6 +17,7 @@ body {
   border: 0.5px solid black;
   border-radius: 10px;
   position: relative;
+  text-align: center;
   font-size: 80px;
   align-items: center;
   &:before {
