--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,7 +1,10 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 body {
-  background: #477148;
+  background-image: url("https://149347115.v2.pressablecdn.com/wp-content/uploads/2011/09/blackjack.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   box-sizing: border-box;
 }
 .card {
