--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -1,10 +1,7 @@
 @import "~bootstrap/scss/bootstrap.scss";
 
 body {
-  background-image: url("https://149347115.v2.pressablecdn.com/wp-content/uploads/2011/09/blackjack.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-attachment: fixed;
+  background-color: #13a865;
   box-sizing: border-box;
 }
 .card {
