--- a/src/style/index.scss
+++ b/src/style/index.scss
@@ -11,6 +11,23 @@ body {
   margin-top: 12%;
   padding: 0, 0, 0, 0;
 }
+
+.footer {
+  position: relative;
+  padding: 0, 0, 0, 0;
+  margin-top: 12%;
+}
+
+.footer-text {
+  color: white;
+}
+
+a:link {
+  color: red;
+}
+a:visited {
+  color: red;
+}
 .card {
   background: white;
   box-shadow: 2px 5px 10px black;
